setup scala project